[gd_scene load_steps=17 format=3 uid="uid://4klp2y0hsh2q"]

[ext_resource type="Script" uid="uid://l8eonl04ri8f" path="res://NoseWheelSteering/test_aircraft.gd" id="1_v83q3"]
[ext_resource type="PackedScene" uid="uid://golmmaxk6a72" path="res://Models/Cessna172/Cessna172.gltf" id="2_4yyhi"]
[ext_resource type="Script" uid="uid://cwxwrrnsfrnrp" path="res://MassDistribution/MassComponent.gd" id="4_mdbw4"]
[ext_resource type="PackedScene" uid="uid://cumfrg2ygae4l" path="res://NoseWheelSteering/Wheels/AdvancedWheel.tscn" id="4_v83q3"]
[ext_resource type="Script" uid="uid://ccwj2tc1bb61r" path="res://NoseWheelSteering/Wheels/BrakeComponent.gd" id="5_4yyhi"]

[sub_resource type="PhysicsMaterial" id="PhysicsMaterial_ouijl"]
rough = true
bounce = 0.05

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_hmljs"]
height = 3.57612

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_1pfs4"]
radius = 0.279999
height = 4.08267

[sub_resource type="BoxShape3D" id="BoxShape3D_weev2"]
size = Vector3(5, 0.2, 1)

[sub_resource type="CylinderShape3D" id="CylinderShape3D_hmljs"]
height = 0.088
radius = 0.176

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_4yyhi"]
radius = 0.063045
height = 0.867021

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_hg5er"]
radius = 0.0673329
height = 1.08637

[sub_resource type="BoxMesh" id="BoxMesh_hmljs"]
size = Vector3(0.75, 0.75, 0.75)

[sub_resource type="BoxMesh" id="BoxMesh_1pfs4"]
size = Vector3(1, 0.5, 3)

[sub_resource type="BoxMesh" id="BoxMesh_weev2"]
size = Vector3(5, 0.2, 1)

[sub_resource type="SphereMesh" id="SphereMesh_hmljs"]

[node name="TestAircraft" type="RigidBody3D"]
mass = 825.0
physics_material_override = SubResource("PhysicsMaterial_ouijl")
center_of_mass_mode = 1
center_of_mass = Vector3(-0.022444, 1.16299, -0.756601)
can_sleep = false
continuous_cd = true
script = ExtResource("1_v83q3")

[node name="Sketchfab_Scene" parent="." instance=ExtResource("2_4yyhi")]
transform = Transform3D(-1, 4.64685e-16, -8.74228e-08, -2.37845e-09, 0.99963, 0.0272063, 8.73904e-08, 0.0272063, -0.99963, 0, 1.21628, 0.0400033)

[node name="BodyColl" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 1.15966, -0.456955)
shape = SubResource("CapsuleShape3D_hmljs")

[node name="Body2Coll" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 1.15966, 3.03492)
shape = SubResource("CapsuleShape3D_1pfs4")

[node name="LeftWingColl" type="CollisionShape3D" parent="."]
transform = Transform3D(0.999104, 0.0423116, 0, -0.0423116, 0.999104, 0, 0, 0, 1, -2.968, 1.961, 0.084)
shape = SubResource("BoxShape3D_weev2")

[node name="RightWingColl" type="CollisionShape3D" parent="."]
transform = Transform3D(0.999123, -0.0418756, 0, 0.0418756, 0.999123, 0, 0, 0, 1, 2.968, 1.961, 0.084)
shape = SubResource("BoxShape3D_weev2")

[node name="FrontWheel_Col" type="CollisionShape3D" parent="."]
unique_name_in_owner = true
transform = Transform3D(-4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0, 1, 0, 0.17443, -1.64878)
shape = SubResource("CylinderShape3D_hmljs")
disabled = true

[node name="GearCol" type="CollisionShape3D" parent="."]
unique_name_in_owner = true
transform = Transform3D(-4.01233e-08, 4.70265e-08, 1, 0.996877, -0.0789637, 4.37114e-08, 0.0789637, 0.996877, -4.37114e-08, -3.46008e-09, 0.326147, -1.57622)
shape = SubResource("CapsuleShape3D_4yyhi")

[node name="GearCol2" type="CollisionShape3D" parent="."]
unique_name_in_owner = true
transform = Transform3D(-4.14591e-08, 4.58532e-08, 1, 0.998736, -0.0502618, 4.37114e-08, 0.0502618, 0.998736, -4.37114e-08, 1.27, 0.350207, 0.0644763)
shape = SubResource("CapsuleShape3D_hg5er")

[node name="GearCol3" type="CollisionShape3D" parent="."]
unique_name_in_owner = true
transform = Transform3D(-4.14591e-08, 4.58532e-08, 1, 0.998736, -0.0502618, 4.37114e-08, 0.0502618, 0.998736, -4.37114e-08, -1.27, 0.35, 0.064)
shape = SubResource("CapsuleShape3D_hg5er")

[node name="LeftWheel_Col" type="CollisionShape3D" parent="."]
transform = Transform3D(-4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0, 1, -1.26954, 0.174, 0.025)
shape = SubResource("CylinderShape3D_hmljs")
disabled = true

[node name="RightWheel_Col" type="CollisionShape3D" parent="."]
transform = Transform3D(-4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0, 1, 1.27, 0.174, 0.025)
shape = SubResource("CylinderShape3D_hmljs")
disabled = true

[node name="Camera3D" type="Camera3D" parent="."]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 0.848593, 0.529046, 0, -0.529046, 0.848593, 0, 16.8718, 16.186)

[node name="MassComponents" type="Node3D" parent="."]
unique_name_in_owner = true

[node name="MotorMass" type="CSGMesh3D" parent="MassComponents" groups=["mass_components"]]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.08294, -1.82412)
mesh = SubResource("BoxMesh_hmljs")
script = ExtResource("4_mdbw4")
mass = 200.0
metadata/_custom_type_script = "uid://cwxwrrnsfrnrp"

[node name="InstrumentMass" type="CSGMesh3D" parent="MassComponents" groups=["mass_components"]]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.851366, -1.15637)
mesh = SubResource("BoxMesh_hmljs")
script = ExtResource("4_mdbw4")
mass = 150.0
metadata/_custom_type_script = "uid://cwxwrrnsfrnrp"

[node name="PropellerMass" type="CSGMesh3D" parent="MassComponents" groups=["mass_components"]]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.2496, -2.36855)
mesh = SubResource("BoxMesh_hmljs")
script = ExtResource("4_mdbw4")
mass = 50.0
metadata/_custom_type_script = "uid://cwxwrrnsfrnrp"

[node name="PilotMass" type="CSGMesh3D" parent="MassComponents" groups=["mass_components"]]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.231598, 1.05118, -0.467118)
mesh = SubResource("BoxMesh_hmljs")
script = ExtResource("4_mdbw4")
mass = 80.0
metadata/_custom_type_script = "uid://cwxwrrnsfrnrp"

[node name="BodyMass" type="CSGMesh3D" parent="MassComponents" groups=["mass_components"]]
transform = Transform3D(1, 0, 0, 0, 0.998109, 0.0614666, 0, -0.0614666, 0.998109, 0, 0.833866, 0.416816)
mesh = SubResource("BoxMesh_1pfs4")
script = ExtResource("4_mdbw4")
mass = 50.0
metadata/_custom_type_script = "uid://cwxwrrnsfrnrp"

[node name="BodyMass2" type="CSGMesh3D" parent="MassComponents" groups=["mass_components"]]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.08275, 3.61047)
mesh = SubResource("BoxMesh_1pfs4")
script = ExtResource("4_mdbw4")
mass = 20.0
metadata/_custom_type_script = "uid://cwxwrrnsfrnrp"

[node name="LeftWingMass" type="CSGMesh3D" parent="MassComponents" groups=["mass_components"]]
transform = Transform3D(0.999104, 0.0423116, 0, -0.0423116, 0.999104, 0, 0, 0, 1, -2.968, 1.961, 0.084)
mesh = SubResource("BoxMesh_weev2")
script = ExtResource("4_mdbw4")
mass = 100.0
metadata/_custom_type_script = "uid://cwxwrrnsfrnrp"

[node name="RightWingMass" type="CSGMesh3D" parent="MassComponents" groups=["mass_components"]]
transform = Transform3D(0.999123, -0.0418757, 0, 0.0418757, 0.999123, 0, 0, 0, 1, 2.968, 1.9609, 0.084)
mesh = SubResource("BoxMesh_weev2")
script = ExtResource("4_mdbw4")
mass = 100.0
metadata/_custom_type_script = "uid://cwxwrrnsfrnrp"

[node name="GearLeftMass" type="CSGMesh3D" parent="MassComponents" groups=["mass_components"]]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1.26954, 0.174, 0.025)
mesh = SubResource("BoxMesh_hmljs")
script = ExtResource("4_mdbw4")
mass = 25.0
metadata/_custom_type_script = "uid://cwxwrrnsfrnrp"

[node name="GearRightMass" type="CSGMesh3D" parent="MassComponents" groups=["mass_components"]]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1.27, 0.174, 0.025)
mesh = SubResource("BoxMesh_hmljs")
script = ExtResource("4_mdbw4")
mass = 25.0
metadata/_custom_type_script = "uid://cwxwrrnsfrnrp"

[node name="GearNoseMass" type="CSGMesh3D" parent="MassComponents" groups=["mass_components"]]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.17443, -1.64878)
mesh = SubResource("BoxMesh_hmljs")
script = ExtResource("4_mdbw4")
mass = 25.0
metadata/_custom_type_script = "uid://cwxwrrnsfrnrp"

[node name="CoM" type="CSGMesh3D" parent="."]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.022444, 1.16299, -0.756601)
mesh = SubResource("SphereMesh_hmljs")

[node name="ThrustPos" type="Marker3D" parent="."]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.2496, -2.36855)

[node name="BrakeComponent" type="Node" parent="."]
unique_name_in_owner = true
script = ExtResource("5_4yyhi")
metadata/_custom_type_script = "uid://ccwj2tc1bb61r"

[node name="Gear" type="Marker3D" parent="."]
unique_name_in_owner = true

[node name="NoseGear" parent="Gear" node_paths=PackedStringArray("aircraft", "my_collision") instance=ExtResource("4_v83q3")]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.20546, -1.649)
is_steerable = true
aircraft = NodePath("../..")
my_collision = NodePath("../../FrontWheel_Col")
rolling_resistance = 20.0
max_suspension_travel = 0.11

[node name="LeftGear" parent="Gear" node_paths=PackedStringArray("brake_component", "aircraft", "my_collision") instance=ExtResource("4_v83q3")]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1.27, 0.244667, 0.025)
brake_component = NodePath("../../BrakeComponent")
aircraft = NodePath("../..")
my_collision = NodePath("../../LeftWheel_Col")
rolling_resistance = 20.0
max_suspension_travel = 0.11

[node name="RightGear" parent="Gear" node_paths=PackedStringArray("brake_component", "aircraft", "my_collision") instance=ExtResource("4_v83q3")]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1.27, 0.244667, 0.025)
brake_component = NodePath("../../BrakeComponent")
aircraft = NodePath("../..")
my_collision = NodePath("../../RightWheel_Col")
rolling_resistance = 20.0
max_suspension_travel = 0.11
